--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
 }
 /** Track List **/
 .locationList {
+	width:780px;
+	/*height:600px;*/
     padding: 10px 20px;
+    float:left;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .15), 0 1px 0 rgba(255, 255, 255, .04);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .15), 0 1px 0 rgba(255, 255, 255, .04);
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .15), 0 1px 0 rgba(255, 255, 255, .04);
@@ -14,6 +17,23 @@
     /*background: transparent url('../img/tracklist-bg.png') repeat 0 0 scroll;*/
 color: #111;
 font-size: 14px;
+ /*   background-color:#FAFAFA;*/
+}
+.mapClass {
+	/*width:460px;*/
+	height:400px;
+    padding: 10px 20px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .15), 0 1px 0 rgba(255, 255, 255, .04);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .15), 0 1px 0 rgba(255, 255, 255, .04);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .15), 0 1px 0 rgba(255, 255, 255, .04);
+    border-radius: 6px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    /*background: transparent url('../img/tracklist-bg.png') repeat 0 0 scroll;*/
+	color: #111;
+	font-size: 14px;
+	overflow:hidden;
+
  /*   background-color:#FAFAFA;*/
 }
 
